scss/_patterns_lists.scss
@import 'settings';

$numbered-bullet-width: 3rem;
$numbered-bullet-margin-right: 1rem;
// Default list styling
// Mixin for basic styled lists
@mixin vf-list {
  list-style: none;
  margin-left: 0;
  padding-left: 0;
}

// Mixin for list items
@mixin vf-list-item {
  margin-top: 0;
  padding-bottom: .63rem;
  padding-top: .63rem;
}

@mixin vf-list-item-divided {
  border-bottom: 1px dotted $color-mid-light;

  &:last-of-type,
  .last-item {
    border-bottom: 0;
  }
}

// Mixin for inline list items
@mixin vf-inline-list-item {
  display: inline;
  list-style: none;
  margin-right: 1.25rem;

  &:last-of-type,
  .last-item {
    margin-right: 0;
  }
}

@mixin vf-p-lists {
  @include vf-p-list;
  @include vf-p-list-divided;
  @include vf-p-list-item-state;
  @include vf-p-inline-list;
  @include vf-p-inline-list-middot;
  @include vf-p-stepped-list;
  @include vf-p-stepped-list-detailed;
  @include vf-p-list-split;
}

@function svg-tick($color) {
  @if type-of($color) != 'color' {
    @warn '#{$color} is not a color.';
    @return false;
  }
  @return url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Ccircle fill='" + vf-url-friendly-color($color) + "' cx='7' cy='7' r='7'/%3E%3Cpath fill='%23fff' d='M6.1 10.813L2.41 8.105l1.184-1.613L5.9 8.187l4.393-4.394 1.414 1.414z' /%3E%3C/svg%3E");
}

// List styling using list class
@mixin vf-p-list {
  .p-list {
    @extend %clearfix;
    @include vf-list;

    &__item {
      margin-top: .6667rem;
    }
  }
}

// A list with separators between items
@mixin vf-p-list-divided {
  .p-list--divided {
    @include vf-list;

    .p-list__item {
      @include vf-list-item;
      @include vf-list-item-divided;
    }

    &.is-split .p-list__item:last-of-type {
      border-bottom: 1px dotted $color-mid-light;
    }
  }
}

// Displays item with a tick bullet
@mixin vf-p-list-item-state {
  .is-ticked {
    background-image: svg-tick($color-accent);
    background-position: 0 .3rem;
    background-repeat: no-repeat;
    padding-left: 25px;

    .p-list--divided & {
      background-position: 0 $sp-medium;
    }
  }
}

// Displays a list inline with spacing
@mixin vf-p-inline-list {
  .p-inline-list {
    margin-left: 0;
    padding-left: 0;

    &__item {
      @include vf-inline-list-item;
    }
  }
}

// Displays a list inline with items separated by dots
@mixin vf-p-inline-list-middot {
  .p-inline-list--middot {
    margin-left: 0;
    padding-left: 0;

    .p-inline-list__item {
      @include vf-inline-list-item;
      position: relative;

      &::after {
        color: $color-mid-dark;
        content: '\00b7';
        font-size: 1.4rem;
        line-height: 0;
        position: absolute;
        right: -$sp-medium;
        top: .55rem;
      }

      &:hover::after {
        color: $color-mid-dark;
      }

      &:last-of-type,
      .last-item {
        &::after {
          content: '';
        }
      }
    }
  }
}

// Displays a step by step list of instructions
@mixin vf-p-stepped-list {
  .p-list-step {
    list-style: none;
    margin-left: $numbered-bullet-width + $numbered-bullet-margin-right;
    padding: 0;

    &__title {
      margin-top: 0;
      position: relative;

      + * {
        margin-top: 0;
      }
    }

    &__item {
      clear: both;
      margin-left: 0;
      margin-top: $sp-large;
      width: 100%;

      &:first-child {
        margin-top: $sp-small;

        @media only screen and (min-width: $breakpoint-large) {
          margin-top: 0;
        }
      }
    }

    &__bullet {
      background-color: $color-mid-dark;
      border-radius: 50%;
      color: $color-x-light;
      display: inline-block;
      font-size: $sp-large;
      height: $numbered-bullet-width;
      line-height: $numbered-bullet-width;
      margin-left: -$numbered-bullet-width - $numbered-bullet-margin-right;
      margin-top: -.4em;
      position: absolute;
      text-align: center;
      width: $numbered-bullet-width;

      @media (min-width: $breakpoint-large) {
        margin-top: -.15em;
      }
    }
  }
}

@mixin vf-p-stepped-list-detailed {
  .p-stepped-list--detailed {
    @extend %clearfix;
    list-style: none;
    margin-left: 0;
    padding: 0 2rem 0 $numbered-bullet-width + $numbered-bullet-margin-right;
    @media (max-width: $grid-max-width) {
      margin-top: $sp-xx-large;
    }

    .p-list-step__item {
      margin-bottom: $sp-xxx-large;

      @media (min-width: $breakpoint-medium) {
        display: flex;
        margin: 0;

        >:nth-child(2n) {
          @include column(6, $grid-columns);
        }

        >:nth-child(2n+1) {
          @include column(6, $grid-columns, true);
        }
      }
    }

    .p-list-step__title {
      @media (min-width: $breakpoint-medium) {
        padding-top: $sp-xx-large;
      }
    }

    .p-list-step__content {
      background: $color-x-light;
      color: $color-x-dark;

      @media (min-width: $breakpoint-medium) {
        border-bottom: 1px solid $color-light;
        padding: $sp-xx-large 0;
      }
    }
  }
}

// Adaptor class `is-split` to split the items of a list into two columns
@mixin vf-p-list-split {
  [class*='p-list'].is-split {

    @media (min-width: $breakpoint-medium) {
      @supports (columns: 1) {
        column-gap: $sp-x-large;
        columns: 2;

        .p-list__item {
          display: inline-block;
          width: 100%;
        }
      }

      @supports not (columns: 1) {
        display: flex;
        flex-wrap: wrap;

        .p-list__item {
          width: calc(50% - .5rem);
        }
      }

      &:nth-child(2n-1) {
        margin-right: $sp-medium;
      }
    }
  }
}

